# ffmpeg_android_demo

./: README.md
app/: CMakeLists.txt  build.gradle
app/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/androidTest/java/com/example/zhexuanliu/swsscaledemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/ffmpeg/: demo_scaling.c
app/src/main/ffmpeg/include/: demo_scaling.h
app/src/main/ffmpeg/libs/libavutil/include/: atomic_suncc.h  ffversion.h  pixfmt.h
app/src/main/ffmpeg/libs/libswscale/include/: swscale.h  version.h
app/src/main/java/com/example/zhexuanliu/swsscaledemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/zhexuanliu/swsscaledemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
